GBAY-55 dotnet filels are added

--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,16 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
-# Node artifact files
-node_modules/
-dist/
 
-# Compiled Java class files
-*.class
+# Dotnet artifact files
+bin/
+obj/
 
 # Compiled Python bytecode
 *.py[cod]
 
 # Log files
 *.log
-
-# Package files
-*.jar
-
-# Maven
-target/
-dist/
 
 # JetBrains IDE
 .idea/
